fix: input dark mode

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ h2.titulo span {
     width: 60px;
     height: 60px;
     border-radius: 30%;
-    border: none;
+    border: 0;
     background-color: #242424;
     font-size: 30px;
     cursor: pointer;
@@ -104,7 +104,7 @@ h2.titulo span {
 }
 
 .link-3::before {
-    background-image: linear-gradient(#f9ce34,  #ee2a7b,  #6228d7);
+    background-image: linear-gradient(45deg, #f9ce34,  #ee2a7b,  #6228d7);
 }
 
 .btn-social button::before {
@@ -366,6 +366,7 @@ body.dark .overlay-menu {
 
 body.dark form input, body.dark form textarea {
     background-color: #a3a3a31d;
+    color: #000;
 }
 
 body.dark .btn-social button {
